--- a/Hackothon/index.html
+++ b/Hackothon/index.html
@@ -6,193 +6,231 @@
 <link rel="stylesheet" href="./CSS /extraLayout.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="./CSS /layout.css">
+
 <body>
 
 
-<div class="w3-top">
-  <div class="w3-bar" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+  <div class="w3-top">
+    <div class="w3-bar" id="myNavbar">
+      <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#home" class="w3-bar-item w3-button">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
+      <a href="#home" class="w3-bar-item w3-button">HOME</a>
+      <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
+      <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
+      <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i>
     </a>
-  </div>
-
- 
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
-  </div>
-</div>
-
-
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-  <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity"><span class="w3-hide-small">SPLASH!</span></span>
-  </div>
-</div>
-
-
-<div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">ABOUT SPLASH!</h3>
-  <p class="w3-center"><em>we are Crypto Crew</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  <div class="w3-row">
-    <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>Splash Team!</b></p><br>
-      <img src="./CSS /images/logo-for-web.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo splash team" width="500" height="333">
     </div>
 
 
-    <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to our website. we Splash Team lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-  </div>
-</div>
-
-<div class="w3-row w3-center w3-dark-grey w3-padding-16">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Lilo</span><br>
-    Team Leader
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Richard</span><br>
-    Projects co-ordinator
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">lwando</span><br>
-    Head of Research
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Zubair</span><br>
-    Head of create and design
-  </div>
-</div>
-
-
-<div class="bgimg-2 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
-  </div>
-</div>
-
-
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
-
-
-  <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
-      <img src="./CSS /images/50-Litre-Life-Poster-colour-1-e1519114277626.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="./CSS /images/603x339_story-a4147f39-abfa-588a-8f35-1b811ec52119_117642.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="./CSS /images/lpxrvrpcdro2u8poluef.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="./CSS /images/Theewaterskloof-dam.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+      <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
+      <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
+      <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
+      <a href="#" class="w3-bar-item w3-button">SEARCH</a>
     </div>
   </div>
 
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3">
-      <img src="./CSS /images/unname.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
-    </div>
 
-    <div class="w3-col m3">
-      <img src="./CSS /images/white-squatter-camps-South-Africa-9.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+  <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+    <div class="w3-display-middle" style="white-space:nowrap;">
+      <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity"><span class="w3-hide-small">SPLASH!</span></span>
     </div>
-
-    <div class="w3-col m3">
-      <img src="./CSS /images/south-africa-draught-graphic.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="./CSS /images/unnamed.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
-    </div>
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
   </div>
-</div>
 
 
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
+  <div class="w3-content w3-container w3-padding-64" id="about">
+    <h3 class="w3-center">ABOUT SPLASH!</h3>
 
-
-<div class="bgimg-3 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
-  </div>
-</div>
-
-
-<div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">WHERE I WORK</h3>
-  <p class="w3-center"><em>I'd love your feedback!</em></p>
-
-  <div class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
- 
-      <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:400px;"></div>
-    </div>
-    <div class="w3-col m8 w3-panel">
-      <div class="w3-large w3-margin-bottom">
+    <p>Water is an essntial for everyday life, and like many of earths natural resources it is limited. Only two percent point five of the water on earth suitable for drinking , and with our ever growing population it seems only logical to consevere this
+      precious recourse. Water conservation is the process of using water sparingly. only using enough to get by ,not in execive amounts . Conserving water minimizes the effects of drought and water shortages. By reducing the amount of water we use now
+      we can help. Splash aims to help to educate indiviuals on how to contribute towards a solution on our water crisis.
+    </p>
+    <div class="w3-row">
+      <div class="w3-col m6 w3-center w3-padding-large">
+        <p><b><i class="fa fa-user w3-margin-right"></i>Splash Team!</b></p><br>
+        <img src="./CSS /images/logo-for-web.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo splash team" width="500" height="333">
       </div>
- 
-      <form action="/action_page.php" target="_blank">
-        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-          </div>
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-          </div>
+
+
+      <div class="w3-col m6 w3-hide-small w3-padding-large">
+
+
+        <p class="w3-center"><em>we are Crypto Crew</em></p>
+      </div>
+      <p><b> Water equals life</b> <br> Crypto Crew is made of a team of agile developers . The water issue facing our generetaion is a frighting issue. we have dedicated our work towards rasing awareness to water conservation. Our goal is to ensure a health
+        eco system for generations to come. Water is life water is precious ,Crypto Crew needs you too.
+      </p>
+    </div>
+  </div>
+  </div>
+
+  <div class="w3-row w3-center w3-dark-grey w3-padding-16">
+    <div class="w3-quarter w3-section">
+      <span class="w3-xlarge">Lilo</span><br> Team Leader
+    </div>
+    <div class="w3-quarter w3-section">
+      <span class="w3-xlarge">Richard</span><br> Projects co-ordinator
+    </div>
+    <div class="w3-quarter w3-section">
+      <span class="w3-xlarge">lwando</span><br> Head of Research
+    </div>
+    <div class="w3-quarter w3-section">
+      <span class="w3-xlarge">Zubair</span><br> Head of create and design
+    </div>
+  </div>
+
+
+  <div class="bgimg-2 w3-display-container w3-opacity-min">
+    <div class="w3-display-middle">
+      <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
+    </div>
+  </div>
+
+
+  <div class="w3-content w3-container w3-padding-64" id="portfolio">
+    <h3 class="w3-center">MY WORK</h3>
+    <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
+
+
+    <div class="w3-row-padding w3-center">
+      <div class="w3-col m3">
+        <img src="./CSS /images/50-Litre-Life-Poster-colour-1-e1519114277626.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      </div>
+
+      <div class="w3-col m3">
+        <img src="./CSS /images/603x339_story-a4147f39-abfa-588a-8f35-1b811ec52119_117642.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+      </div>
+
+      <div class="w3-col m3">
+        <img src="./CSS /images/lpxrvrpcdro2u8poluef.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+      </div>
+
+      <div class="w3-col m3">
+        <img src="./CSS /images/Theewaterskloof-dam.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+      </div>
+    </div>
+
+    <div class="w3-row-padding w3-center w3-section">
+      <div class="w3-col m3">
+        <img src="./CSS /images/unname.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+      </div>
+
+      <div class="w3-col m3">
+        <img src="./CSS /images/white-squatter-camps-South-Africa-9.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+      </div>
+
+      <div class="w3-col m3">
+        <img src="./CSS /images/south-africa-draught-graphic.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+      </div>
+
+      <div class="w3-col m3">
+        <img src="./CSS /images/unnamed.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+      </div>
+      <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
+    </div>
+  </div>
+
+
+  <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+    <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+    <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+      <img id="img01" class="w3-image">
+      <p id="caption" class="w3-opacity w3-large"></p>
+    </div>
+  </div>
+
+
+  <div class="bgimg-3 w3-display-container w3-opacity-min">
+    <div class="w3-display-middle">
+      <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
+    </div>
+  </div>
+
+
+  <div class="w3-content w3-container w3-padding-64" id="contact">
+    <h3 class="w3-center">WHERE I WORK</h3>
+    <p class="w3-center"><em>I'd love your feedback!</em></p>
+
+    <div class="w3-row w3-padding-32 w3-section">
+      <div class="w3-col m4 w3-container">
+
+        <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:400px;"></div>
+      </div>
+      <div class="w3-col m8 w3-panel">
+        <div class="w3-large w3-margin-bottom">
         </div>
-        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-        <button class="w3-button w3-black w3-right w3-section" type="submit">
+
+        <form action="/action_page.php" target="_blank">
+          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
+            <div class="w3-half">
+              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+            </div>
+            <div class="w3-half">
+              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
+            </div>
+          </div>
+          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+          <button class="w3-button w3-black w3-right w3-section" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
-      </form>
+        </form>
+      </div>
     </div>
   </div>
+
+
+  </div>
+
+
+  <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+    <div class="w3-row w3-center w3-dark-grey w3-padding-16">
+
+<div class="logo1" alt="">
+    <h2>Crypto Crew</h2>
 </div>
 
+      <div class="w3-quarter w3-section">
 
-<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-</footer>
- 
-<script src="./JS/script.js" charset="utf-8"></script>
+        <span class="w3-xlarge">Lilo Moykweni</span><br>         <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+                <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+                <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
+                <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+                <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      </div>
+      <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">Richard Ross</span><br>         <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+                <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+                <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
+                <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+                <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      </div>
+      <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">lwando Mbokotho</span><br>         <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+                <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+                <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
+                <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+                <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      </div>
+      <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">Zubair Adams</span><br>         <a href="https://www.facebook.com/zubairzainodien.adams">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+                <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+                <a href="https://zubairadams.github.io"><i class="fa fa-github w3-hover-opacity"></i></a>
+                <a href="https://twitter.com/not_adams720"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+                <a href="https://www.linkedin.com/in/zubair-adams-40a5b2160/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      </div>
+    </div>
+      <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  </footer>
+
+
+
+
+
+  <script src="./JS/script.js" charset="utf-8"></script>
 
 </body>
+
 </html>
