--- a/Hackothon/index.html
+++ b/Hackothon/index.html
@@ -67,20 +67,7 @@
   </div>
   </div>
 
-  <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-    <div class="w3-quarter w3-section">
-      <span class="w3-xlarge">Lilo</span><br> Team Leader
-    </div>
-    <div class="w3-quarter w3-section">
-      <span class="w3-xlarge">Richard</span><br> Projects co-ordinator
-    </div>
-    <div class="w3-quarter w3-section">
-      <span class="w3-xlarge">lwando</span><br> Head of Research
-    </div>
-    <div class="w3-quarter w3-section">
-      <span class="w3-xlarge">Zubair</span><br> Head of create and design
-    </div>
-  </div>
+
 
 
   <div class="bgimg-2 w3-display-container w3-opacity-min">
@@ -188,41 +175,43 @@
   <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
     <div class="w3-row w3-center w3-dark-grey w3-padding-16">
 
-<div class="logo1" alt="">
-    <h2>Crypto Crew</h2>
-</div>
+      <div class="logo1" alt="">
+        <h2>Crypto Crew</h2>
+      </div>
 
       <div class="w3-quarter w3-section">
 
-        <span class="w3-xlarge">Lilo Moykweni</span><br>         <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-                <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
-                <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
-                <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-                <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+        <span class="w3-xlarge">Lilo Moykweni</span><br> Team Leader<br> <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+        <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+        <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
+        <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+        <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">Richard Ross</span><br>         <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-                <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
-                <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
-                <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-                <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+        <span class="w3-xlarge">Richard Ross</span><br>Projects co-ordinator<br>
+        <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+        <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+        <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
+        <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+        <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">lwando Mbokotho</span><br>         <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-                <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
-                <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
-                <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-                <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+        <span class="w3-xlarge">lwando Mbokotho</span><br> Head of Research<br>
+        <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+        <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+        <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
+        <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+        <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">Zubair Adams</span><br>         <a href="https://www.facebook.com/zubairzainodien.adams">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-                <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
-                <a href="https://zubairadams.github.io"><i class="fa fa-github w3-hover-opacity"></i></a>
-                <a href="https://twitter.com/not_adams720"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-                <a href="https://www.linkedin.com/in/zubair-adams-40a5b2160/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+        <span class="w3-xlarge">Zubair Adams</span><br> Head of create and design<br> <a href="https://www.facebook.com/zubairzainodien.adams">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+        <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+        <a href="https://zubairadams.github.io"><i class="fa fa-github w3-hover-opacity"></i></a>
+        <a href="https://twitter.com/not_adams720"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+        <a href="https://www.linkedin.com/in/zubair-adams-40a5b2160/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       </div>
     </div>
-      <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+    <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   </footer>
 
 
