--- a/index.html
+++ b/index.html
@@ -57,13 +57,9 @@
     <p class="w3-center">
       <em>we are Crypto Crew</em>
     </p>
-    <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum
-      dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-      enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-      irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-      ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>Water is an essntial for everyday life, and like many of earths natural resources it is limited. Only two percent point five of the water on earth suitable for drinking , and with our ever growing population it seems only logical to consevere this
+      precious recourse. Water conservation is the process of using water sparingly. only using enough to get by ,not in execive amounts . Conserving water minimizes the effects of drought and water shortages. By reducing the amount of water we use now
+      we can help. Splash aims to help to educate indiviuals on how to contribute towards a solution on our water crisis..</p>
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <p>
@@ -77,12 +73,8 @@
 
 
       <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p>Welcome to our website. we Splash Team lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-          ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-          id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Welcome to our website. we Crytpo Crew believe that <br> <b> Water equals life</b> <br> Crypto Crew is made of a team of agile developers . The water issue facing our generetaion is a frighting issue. we have dedicated our work towards rasing awareness
+          to water conservation. Our goal is to ensure a health eco system for generations to come. Water is life water is precious ,Crypto Crew needs you too.</p>
       </div>
     </div>
   </div>
@@ -102,7 +94,7 @@
         </div>
         <div class="w3-col m8 w3-panel">
           <div class="w3-large w3-margin-bottom">
-          
+
                 <p>please insert the amount of people in your house hold
                   <input class="People" class="w3-input w3-border" type="number" min="1" max="8" placeholder="1-8 only please">
                 </p>
@@ -130,7 +122,7 @@
   </div>
 
 
-  
+
   <div class="bgimg-2 w3-display-container w3-opacity-min">
     <div class="w3-display-middle">
       <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
@@ -139,10 +131,18 @@
 
 
   <div class="w3-content w3-container w3-padding-64" id="portfolio">
-    <h3 class="w3-center">MY WORK</h3>
+    <h3 class="w3-center">Tips and Tricks</h3>
     <p class="w3-center">
-      <em>Here are some of my latest lorem work ipsum tipsum.
-        <br> Click on the images to make them bigger</em>
+      <br>1. Shower Bucket. Instead of letting the water pour down the drain, stick a bucket under the faucet while you wait for your shower water to heat up. You can use the water for flushing the toilet or watering your plants.
+ <br> 2. Turn off the tap while brushing your teeth Turn off the faucet after you wet your brush, and leave it off until it’s time to rinse.
+<br>
+3. Turn off the tap while washing your hands. Do you need the water to run while you’re scrubbing your hands? Save a few gallons of water and turn the faucet off after you wet your hands until you need to rinse.
+<br>4. If it’s yellow, let it mellow. This tip might not be for everyone, but the toilet is one of the most water-intensive fixtures in the house. Do you need to flush every time?
+<br>5. Fix your leaks. Whether you go DIY or hire a plumber, fixing leaky faucets can mean big water savings.
+    </p>
+
+    <br>
+
     </p>
     <br>
 
@@ -218,66 +218,49 @@
   <!-- graph end -->
   <div class="w3-content w3-container w3-padding-64" id="about">
     <p class="w3-center">
-      <em>we are Crypto Crew</em>
+      <em>the above graph shows water ussage for different areas in cape Town for june 2018.</em>
     </p>
-    <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum
-      dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-      enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-      irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-      ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p></p>
   </div>
 
-<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Lilo</span>
-    <br> Team Leader
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+    <div class="w3-quarter w3-section">
+
+      <span class="w3-xlarge">Lilo Moykweni</span><br> Team Leader<br> <a href="https://www.facebook.com/lmoykweni">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+      <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+      <a href="https://github.com/LiloBar"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://twitter.com/MrLiloBar"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/lilo-moykweni-256898116/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     </div>
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Richard</span>
-    <br> Projects co-ordinator
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <div class="w3-quarter w3-section">
+      <span class="w3-xlarge">Richard Ross</span><br>Projects co-ordinator<br>
+      <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+      <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+      <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     </div>
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Lwando</span>
-    <br> Head of Research
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <div class="w3-quarter w3-section">
+      <span class="w3-xlarge">Lwando Mbokotho</span><br> Head of Research<br>
+      <a href="#">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+      <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+      <a href="#"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="#"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     </div>
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Zubair</span>
-    <br> Head of create and design
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <div class="w3-quarter w3-section">
+      <span class="w3-xlarge">Zubair Adams</span><br> Head of create and design<br> <a href="https://www.facebook.com/zubairzainodien.adams">  <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+      <a href="#"><i class="fa fa-instagram w3-hover-opacity"></i>  </a>
+      <a href="https://zubairadams.github.io"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://twitter.com/not_adams720"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/zubair-adams-40a5b2160/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     </div>
-  </div>
+    </div>
+
+    <a href="#home" class="w3-button w3-light-grey">
+ <i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  </footer>
+
 
   <a href="#home" class="w3-button w3-light-grey">
     <i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
